Redirect to http://jis.qyv.name my "real" homepage.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <html>
-<head><title>Testing</title>
+<head>
+<meta http-equiv="Location" content="URL='http://jis.qyv.name'" />
+<meta http-equiv="Refresh" content="0;URL='http://jis.qyv.name'" />
+<title>Jeff's Home page</title>
 </head>
 <body>
-<h1>Testing</h1>
+<h1>Is Located at <a href="http://jis.qyv.name">http://jis.qyv.name</a></h1>
 </body>
 </html>
 
